// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Administrator resolver > createAdministrator 1`] = `
{
  "emailAddress": "test@test.com",
  "firstName": "First",
  "id": "T_2",
  "lastName": "Last",
  "user": {
    "id": "T_3",
    "identifier": "test@test.com",
    "lastLogin": null,
    "roles": [
      {
        "code": "__super_admin_role__",
        "description": "SuperAdmin",
        "id": "T_1",
        "permissions": [
          "Authenticated",
          "SuperAdmin",
        ],
      },
    ],
  },
}
`;

exports[`Administrator resolver > updateAdministrator 1`] = `
{
  "emailAddress": "new-email",
  "firstName": "new first",
  "id": "T_2",
  "lastName": "new last",
  "user": {
    "id": "T_3",
    "identifier": "new-email",
    "lastLogin": null,
    "roles": [
      {
        "code": "__customer_role__",
        "description": "Customer",
        "id": "T_2",
        "permissions": [
          "Authenticated",
        ],
      },
    ],
  },
}
`;
